@@ -60,10 +60,6 @@ abstract class ModuleIsotope extends Module
 			$GLOBALS['TL_JAVASCRIPT'][] = 'system/modules/isotope/html/isotope.js';
 			$GLOBALS['TL_CSS'][] = 'system/modules/isotope/html/isotope.css';
 
-			// Make sure field data is available
-			$this->loadDataContainer('tl_iso_products');
-			$this->loadLanguageFile('tl_iso_products');
-
 			// Disable caching for pages with certain modules (eg. Cart)
 			if ($this->blnDisableCache)
 			{
